--- a/css/style.css
+++ b/css/style.css
@@ -20,22 +20,18 @@ body {
 }
 
 .main-content{
-  padding-top: 10px;
+  padding: 20px;
+  height: 30%;
 }
 .title-bar {
   display: flex;
   justify-content: space-between;
 }
 
-.main-content > .window-body {
-  height: 100%;
-  padding: 2px;
-  background: white;
-}
 
 #chart-container {
   width: 80%;
-  height: 600px; /* 차트의 높이를 명확히 설정 */
+  height: 70%; /* 차트의 높이를 명확히 설정 */
   background-color: white;
   border: 2px solid black;
   padding: 1px;
@@ -44,6 +40,7 @@ body {
 }
 
 .stock-list-window,
+
 .owned-stocks {
   width: 40%;
   height: 70%;
@@ -56,6 +53,12 @@ body {
   display: flex;
   justify-content: space-between;
   height: 50%;
+}
+
+.main-content > .window-body {
+  height: 100%;
+  padding: 2px;
+  background: white;
 }
 
 .capital,
