--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #C0C0C0;
+  background-color: #008080; /*고전느낌나게 초록으로*/
   padding: 0;
 }
 
@@ -25,18 +25,18 @@ body {
   display: flex;
   gap: 10px;
   padding: 10px;
-  height: 50%; /* Adjusted height for better layout */
+  height: 50%; 
 }
 
-/* Left Column: Stock List and Company Issue */
+/*왼쪽에 영역들분리*/
 .left-column {
-  width: 30%; /* Left column for Stock List and Company Issue */
+  width: 30%; /*30%만 차지하게 */
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-/* Right Column: Chart Container */
+/*오른쪽에 차트분배 70%*/
 .right-column {
   width: 70%;
   display: flex;
@@ -130,7 +130,8 @@ body {
   color: red;
 }
 
-/* Responsive Styling */
+/* 모바일 반응형처리 */
+/* 아이템들이 아래로 내려가게  */
 @media (max-width: 768px) {
   .main-window {
     width: 100%;
